moved to new event processing based on djutils (not tested yet only compiles)